--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@ html, body, .wrapper {
     width: 100%;
     overflow: hidden;
     font-size: 12px;
-    color: #A09F9F;
+    /*color: #A09F9F;*/
     min-width: 960px;
 }
 
@@ -206,13 +206,19 @@ textarea {
     line-height: 26px;
     background: url("../images/new/gobtn.png") no-repeat center center;
     background-size: contain;
+    transform: scale(1.0);
+    transition: all 0.3s ease;
+}
+.gobtn:hover{
+    opacity:0.8;
+    transform: scale(1.2);
 }
 
 /*监控页面*/
 .s-left {
     position: relative;
     height: 100%;
-    width: calc(100% - 320px);
+    width: calc(100% - 220px);
     float: left;
 }
 
@@ -239,6 +245,8 @@ textarea {
 
 .menu-item.active, .menu-item:hover {
     color: #313131;
+    font-size: 16px;
+    font-weight:400;
 }
 
 .menu-item.active:after {
@@ -269,6 +277,7 @@ textarea {
     color: #2A2A2A;
     height: 50px;
     line-height: 50px;
+    font-size: 14px;
     padding: 0 0 0 10px;
     text-align: left;
     cursor: pointer;
@@ -367,6 +376,7 @@ textarea {
 .control-label {
     padding-right: 0;
     padding-left: 0;
+    font-size:14px;;
 }
 
 .single-page .col-sm-9 {
@@ -391,10 +401,16 @@ textarea {
     width: 240px;
     height: 160px;
     position: absolute;
-    right: 60px;
+    right: 48px;
     top: 180px;
     /*border:1px solid red;*/
     z-index: 10;
+}
+.left-main{
+    height:100%;
+    width:100%;
+    border-radius: 4px;
+    box-shadow: 0 0 8px 3px rgba(0,0,0,0.4);
 }
 
 .single-center-middle {
@@ -407,7 +423,8 @@ textarea {
 }
 
 .single-center-middle .block {
-    width: 15%;
+    width: auto;
+    min-width:15%;
     padding: 5px;
     float: left;
 }
@@ -451,6 +468,7 @@ textarea {
     border-radius: 100%;
     background-color: green;
     margin-right: 10px;
+    box-shadow: 0 0 3px 2px rgba(0,0,0,0.2);
 }
 
 .singnal-status:last-child {
@@ -475,6 +493,10 @@ textarea {
 .left-icon {
     display: inline-block;
     margin: 25px 20px 0 0;
+    cursor: pointer;
+}
+.left-icon:hover{
+    opacity:0.8;
 }
 .left-icon:last-child{
     margin-right:30px;
@@ -580,7 +602,8 @@ a[target] img {
     /*width:320px;*/
     float: right;
     height: 100%;
-    background: #313131;
+    /*background: #313131;*/
+    background: #fff;
 }
 
 .single-md-3 {
@@ -588,7 +611,7 @@ a[target] img {
 }
 
 .single-right {
-    width: 320px;
+    width: 220px;
     overflow: auto;
 }
 
@@ -622,23 +645,28 @@ a[target] img {
 .single-right .single-right-up .single-right-up-sub .single-right-up-hidden table .info {
     width: 25%;
     text-align: right;
-    padding-right: 15px;
+    padding-right: 12px;
 }
 
 .single-right .single-right-up .single-right-up-sub .single-right-up-hidden table .input {
     width: 80%;
 }
 
-.single-right .single-right-up .single-right-up-sub .single-right-up-hidden table .input input {
+ .input input {
     color: #000000;
-    width: 70%;
+    width: 80%;
     height: 40px;
     line-height: 40px;
     border: none;
     padding-left: 6px;
     background: #F7F7F7;
 }
-
+.input input[type="text"]:focus{
+    border-color: #66afe9;
+    background: #fff;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
 .single-right .single-right-up .single-right-up-sub .single-right-up-hidden table .input span {
     margin-left: 5px;
 }
@@ -647,17 +675,17 @@ a[target] img {
     float: right;
     position: absolute;
     top: 23px;
-    right: 20px;
+    right: 12px;
     cursor: pointer;
     color: #A09F9F;
 }
 
 .single-right .single-right-up .single-right-up-sub:first-child .ftplus {
-    right: 20px;
+    right: 12px;
 }
 
 .single-right .single-right-up .single-right-up-sub .ftplus {
-    right: 62px;
+    right: 42px;
 }
 
 .single-right .single-right-up .single-right-up-sub.select {
@@ -673,23 +701,21 @@ a[target] img {
     display: block;
     color: #A09F9F;
 }
-
 .single-right .single-right-up .single-right-up-block {
     cursor: pointer;
     height: 60px;
     padding: 0px 20px;
     line-height: 60px;
-    font-size: 16px;
+    font-size: 14px;
     background: #313131;
 
 }
-
 .single-right .single-right-up .single-right-up-block .number {
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .infos-img {
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
 .single-right .single-right-up .sanjiao {
@@ -703,12 +729,14 @@ a[target] img {
     cursor: pointer;
 }
 .single-right .single-right-up .sanjiao img{
-    height: 28px;
-    width: 28px;
+    height: 24px;
+    width: 24px;
+    cursor: pointer;
 }
 
 .single-right .single-right-up .sanjiao:hover {
     color: #FFF;
+    opacity: 0.6;
 }
 
 .single-right .single-right-down {
@@ -1023,7 +1051,7 @@ a[target] img {
 .s-left-icon .hideShowBtn {
     right: 0;
     top: 50%;
-    margin: -25px -35px 0 0;
+    margin: -12px -35px 0 0;
 }
 
 .s-left-icon .rotate90 {
@@ -1049,7 +1077,7 @@ a[target] img {
 .s-right .hideShowBtn {
     left: -35px;
     top: 50%;
-    margin-top: -25px;
+    margin-top: -12px;
 }
 
 .s-right .rotate90 {
